Fix page style overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html {
 body {
     font-family: 'Exo', sans-serif;
     background: linear-gradient(-45deg, #fff06c, #ff7272, #548efc, #23d57c);
-    background-size: 400% 400%;
+    background-size: 400% 500%;
     animation: gradient 15s ease infinite;
 
     overflow-x: hidden;
